--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,4 +1,5 @@
-<form action="/posts" method="post">
+<form action="/posts" method="post"> 
+  <input id="hidden" type="hidden" name="_method" value="patch">
   Name: <input type="text" name="name">
   Content: <input type="text" name="content">
   <input type="submit" id="submit">
