--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,6 +1,6 @@
 <form action="/posts" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
-  Name: <input type="text" name="name">
-  Content: <input type="text" name="content">
+  Name: <input type="text" name="name" value="<%= @post.name %>">
+  Content: <input type="text" name="content" value="<%= @post.content %>">
   <input type="submit" id="submit">
 </form>
