automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,5 @@
 <% @posts.each do |post| %>
+  <p><%= "ID: #{post.id}" %></p>
   <p><%= "Poster: #{post.name}" %></p>
   <p><%= "Content: #{post.content}" %></p>
   <br/>
