--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,5 @@
 <form action="/posts/<%= @post.id %>" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patch">
+  <type="hidden" name="_method" value="patch">
   Name: <input type="text" name="name" value="<%= @post.name %>">
   Content: <input type="text" name="content" value="<%= @post.content %>">
   <input type="submit" id="submit">
